# SmartAD

./: .env.example  .gitignore  BACKEND.md  DEPLOY_EC2.md  LLM.py  README.md  TTS.py  advengine.py  cookies-2.txt  engine.py  engine_backup.py  main.py  modal_workers.py  nginx_default.conf  package-lock.json  pyproject.toml
backend/: pom.xml
backend/src/main/java/com/smartadv/backend/: BackendApplication.java
backend/src/main/java/com/smartadv/backend/common/exception/: StorageException.java
backend/src/main/java/com/smartadv/backend/common/security/: AuthInterceptor.java  UserContext.java
backend/src/main/java/com/smartadv/backend/config/: AsyncConfig.java  S3Config.java  WebConfig.java
backend/src/main/java/com/smartadv/backend/controller/: ArchiveController.java  AuthController.java  JobController.java  VideoController.java
backend/src/main/java/com/smartadv/backend/domain/: AnalysisJob.java  Result.java  SessionToken.java  User.java  Video.java
backend/src/main/java/com/smartadv/backend/dto/: VideoResponse.java
backend/src/main/java/com/smartadv/backend/repository/: AnalysisJobRepository.java  ResultRepository.java  SessionTokenRepository.java  UserRepository.java  VideoRepository.java
backend/src/main/java/com/smartadv/backend/service/: MockS3StorageService.java  S3StorageService.java  StorageService.java  VideoService.java  WorkerClientService.java
backend/src/main/resources/: application.yml
backend/src/test/java/com/smartadv/backend/: BackendApplicationTests.java
docs/: BACKEND.md  HOWTO.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mts
frontend/src/: App.tsx  global.css  index.css  index.tsx
frontend/src/components/: ButtonGroup.tsx  ButtonOutline.tsx  ChromeBrowserBar.tsx  CircularIndeterminateProgres.tsx  DropZone.tsx  IconButtonStandard.tsx  InputField.tsx  LinearDeterminateProgressIn.tsx  ListItem0DensityBaseline.tsx  NavigationRail.tsx  NavigationRail1.tsx  Progress.tsx  Small.tsx  Star.tsx  Stars.tsx  Stop1.tsx  Switch.tsx  Track.tsx  YoutubePlayer.tsx
frontend/src/context/: AppContext.tsx
frontend/src/pages/: Archive.tsx  Download.tsx  DragDrop.tsx  Likes.tsx  Login.tsx  Main.tsx  ProgressPage.tsx  Registeration.tsx  View.tsx
mock-s3-storage/job_1/output_clips/: gemini_ad_raw.txt  gemini_ad_script.csv  gemini_ad_script.txt  input_with_ad_audio.m4a  tts_timeline.csv
mock-s3-storage/job_2/output_clips/: gemini_ad_raw.txt  gemini_ad_script.csv  gemini_ad_script.txt  input_with_ad_audio.m4a  silence_summary.txt  stt_summary.txt  tts_timeline.csv
past_trials/: genai.py
