[tool.poetry]
name = "smartadv"
version = "0.1.0"
description = "SmartADV pipeline for silence detection, STT, multimodal LLM prompting, and TTS audio-description mixing"
authors = ["Yujun LEE(Home) <oke05057@gmail.com>"]
readme = "README.md"
package-mode = false

# [참고] torch / torchaudio / soundfile 은 Modal GPU 이미지(modal_workers.py)로 이동했습니다.
# pytorch-cpu 소스도 더 이상 필요하지 않아 제거되었습니다.

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
psutil = "^7.2.2"
packaging = "^26.0"
google-genai = "^1.35.0"
edge-tts = "^7.2.3"
python-dotenv = "^1.2.2"
modal = ">=0.73.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.scripts]
advengine = "advengine:main"
llm = "LLM:main"
tts = "TTS:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
