[tool.poetry]
name = "smartadv"
version = "0.1.0"
description = "SmartADV pipeline for silence detection, STT, multimodal LLM prompting, and TTS audio-description mixing"
authors = ["Yujun LEE(Home) <oke05057@gmail.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
# Silero VAD는 EC2 CPU에서 로컬 실행 → torch/torchaudio CPU 빌드 사용
torch = {version = "^2.8.0", source = "pytorch-cpu"}
torchaudio = {version = "^2.8.0", source = "pytorch-cpu"}
soundfile = "^0.13.1"
psutil = "^7.2.2"
packaging = "^26.0"
google-genai = "^1.35.0"
edge-tts = "^7.2.3"
python-dotenv = "^1.2.2"
modal = ">=0.73.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1,<27.0"

[tool.poetry.scripts]
engine = "engine:main"
llm = "LLM:main"
tts = "TTS:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
